--- a/MMM-SolarEdge-InverterMonitor.css
+++ b/MMM-SolarEdge-InverterMonitor.css
@@ -12,7 +12,7 @@
 
  /*  Progress Bars https://catalin.red/stylish-css3-progress-bars/ */
  
- p.label {
+ #InverterMonitor p.label {
      margin: 0.1em;
      padding: 0.1em;
      line-height: 0.6em;
@@ -20,12 +20,12 @@
      font-size: 0.6em;
  }
 
- p.warning {
+ #InverterMonitor p.warning {
      color: red;
      background: url(./warning.png) right center no-repeat;
  }
 
- .progress-bar {
+ #InverterMonitor .progress-bar {
     background-color: #1a1a1a;
     height: 15px;
     padding: 5px;
@@ -35,7 +35,7 @@
     box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
 }
 
-.progress-bar span {
+#InverterMonitor .progress-bar span {
     display: block;
     height: 100%;
     border-radius: 3px;
@@ -43,27 +43,27 @@
     transition: width .4s ease-in-out;    
 }
 
-.progress-bar span.inverse {
+#InverterMonitor .progress-bar span.inverse {
     float: right;
 }
 
 
-.high span, .low span.inverse {
+#InverterMonitor .high span, #InverterMonitor .low span.inverse {
     background-color: #f51010;
     background-image: linear-gradient(top, #f51010, #ad0000);  
 }
 
-.medium span, .medium span.inverse {
+#InverterMonitor .medium span, #InverterMonitor .medium span.inverse {
       background-color: #fecf23;
       background-image: linear-gradient(top, #fecf23, #fd9215);  
 }   
 
-.low span, .high span.inverse {
+#InverterMonitor .low span, #InverterMonitor .high span.inverse {
       background-color: #a5df41;
       background-image: linear-gradient(top, #a5df41, #4ca916);  
 }
 
-.stripes span {
+#InverterMonitor .stripes span {
     background-size: 30px 30px;
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
@@ -72,7 +72,7 @@
     animation: animate-stripes 3s linear infinite;             
 }
 
-.stripes span.inverse {
+#InverterMonitor .stripes span.inverse {
     background-size: 30px 30px;
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
