--- a/MMM-SolarEdge-InverterMonitor.css
+++ b/MMM-SolarEdge-InverterMonitor.css
@@ -16,34 +16,49 @@
     width: 350px;
 }
 
+.MMM-SolarEdge-InverterMonitor p.status {
+    margin: 0.1em 0;
+    padding: 0.1em 0;
+    line-height: 0.6em;
+    color: #aaa;
+    font-size: 0.6em;
+}
+
+.MMM-SolarEdge-InverterMonitor p .consuming {
+    color:rgb(255, 89, 89);
+}
+
+.MMM-SolarEdge-InverterMonitor p .dumping {
+    color:rgb(58, 255, 58);
+}
+
 .MMM-SolarEdge-InverterMonitor p.label {
-     margin: 0.1em;
-     padding: 0.1em;
+     margin: 0.1em 0;
+     padding: 0.1em 0;
      line-height: 0.6em;
      color: #aaa;
      font-size: 0.6em;
  }
 
-.MMM-SolarEdge-InverterMonitor p.warning {
-     color: red;
-     background: url(./warning.png) right center no-repeat;
-     background-size: 0.9em
- }
+ .MMM-SolarEdge-InverterMonitor p.warning {
+    background: url(./warning.png) right center no-repeat;
+    background-size: 0.9em
+}
 
 .MMM-SolarEdge-InverterMonitor .progress-bar {
     background-color: #1a1a1a;
-    height: 15px;
-    padding: 5px;
+    height: 0.6em;
+    padding: 0.1em;
     width: 100%;
-    margin: 5% 0;         
-    border-radius: 3px;
+    margin: 0.25em 0;         
+    border-radius: 4px;
     box-shadow: 0 1px 5px #000 inset, 0 1px 0 #444;
 }
 
 .MMM-SolarEdge-InverterMonitor .progress-bar span {
     display: block;
     height: 100%;
-    border-radius: 3px;
+    border-radius: 4px;
     box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
     transition: width .4s ease-in-out;    
 }
