--- a/MMM-SolarEdge-InverterMonitor.css
+++ b/MMM-SolarEdge-InverterMonitor.css
@@ -63,8 +63,11 @@
     display: block;
     height: 100%;
     border-radius: 4px;
-    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset;
-    transition: width .4s ease-in-out;    
+    box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset; 
+}
+
+.MMM-SolarEdge-InverterMonitor .progress-bar span.animated {
+    transition: width .4s ease-in-out;
 }
 
 .MMM-SolarEdge-InverterMonitor .progress-bar span.inverse {
