fix animation config

--- a/MMM-SolarEdge-InverterMonitor.css
+++ b/MMM-SolarEdge-InverterMonitor.css
@@ -66,8 +66,8 @@
     box-shadow: 0 1px 0 rgba(255, 255, 255, .5) inset; 
 }
 
-.MMM-SolarEdge-InverterMonitor .progress-bar span.animated {
-    /* transition: width .4s ease-in-out;*/
+.MMM-SolarEdge-InverterMonitor .progress-bar span {
+    transition: width .4s ease-in-out;
 }
 
 .MMM-SolarEdge-InverterMonitor .progress-bar span.inverse {
@@ -79,7 +79,9 @@
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
                         transparent 75%, transparent);            
-    
+}
+
+.MMM-SolarEdge-InverterMonitor .stripes span.animated {
     animation: animate-stripes 3s linear infinite;             
 }
 
@@ -88,7 +90,9 @@
     background-image: linear-gradient(135deg, rgba(255, 255, 255, .15) 25%, transparent 25%,
                         transparent 50%, rgba(255, 255, 255, .15) 50%, rgba(255, 255, 255, .15) 75%,
                         transparent 75%, transparent);            
-    
+}
+
+.MMM-SolarEdge-InverterMonitor .stripes span.inverse.animated {
     animation: animate-stripes-inverse 3s linear infinite;
 }
 
